--- a/config
+++ b/config
@@ -1,1 +1,11 @@
-download_path=download/
+###
+### Pipe for Spigot
+### A wrapper for Spigot
+####
+### Created by Jerred Shepherd
+### Licensed under the GNU GPL 3.0
+###
+
+download_path=download
+servers_path=/home/files/minecraft/servers
+backup_path=backup
